<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Risk_of_open"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Risks_of_open_wifi_header"
            android:textSize="40dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFFFF"
            android:background="#F44336"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/Risks_of_open_wifi_title1"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Risks_of_open_wifi_title2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Risks_of_open_wifi_title3"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>


</ScrollView>